--- a/views/template-nav-bar.ejs
+++ b/views/template-nav-bar.ejs
@@ -3,20 +3,20 @@
 
 <!-- <script src="../public/js/template-nav-bar.js"></script> -->
 <!-- <script type="text/babel" src="../public/webpack/expensesPage.js"></script> -->
-<link
+<!-- <link
   rel="stylesheet"
   type="text/css"
   href="../public/css/template-nav-bar.css"
-/>
-<script type="text/babel" src="../public/webpack/notifications.js"></script> 
+/> -->
+<script type="text/babel" src="../public/webpack/notifications.js"></script>
 
 
 <div id="app"> </div>
-<script type="text/babel" src="../public/webpack/app.js"></script> 
+<script type="text/babel" src="../public/webpack/app.js"></script>
 
 <br>
 <br>
-<br>    
+<br>
 
 
 <div class="modal fade" id="UploadImageModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
