--- a/views/headers.ejs
+++ b/views/headers.ejs
@@ -31,3 +31,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+
+<!-- FontAwesome -->
+<script src="https://kit.fontawesome.com/22d7984b46.js" crossorigin="anonymous"></script>
