--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,9 @@ body{
   background-repeat: no-repeat;
   height: 100%;
   font-family: 'Numans', sans-serif;
+  color:  #272727;
+  /* text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07); */
+  
   }
 
 .btn {
@@ -17,7 +20,18 @@ body{
 }
 
 #search-bar {
-  color:orange;
+  color:orange; 
+}
+
+.navbar {
+  background: rgba(76,76,76,1)  !important;
+}
+#groupChat {
+  box-shadow: 2px -1px 11px -2px rgba(0,0,0,0.75);
+}
+
+#group-dashboard{
+  box-shadow: 2px -1px 11px -2px rgba(0,0,0,0.75);
 }
 
 .input-group-prepend span{
