added jquery tooltip function

--- a/views/template-nav-bar.ejs
+++ b/views/template-nav-bar.ejs
@@ -1,18 +1,15 @@
+<!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/corejs-typeahead/1.2.1/bloodhound.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/corejs-typeahead/1.2.1/typeahead.jquery.min.js"></script>
-
-<!-- <script src="../public/js/template-nav-bar.js"></script> -->
-<!-- <script type="text/babel" src="../public/webpack/expensesPage.js"></script> -->
-<!-- <link
-  rel="stylesheet"
-  type="text/css"
-  href="../public/css/template-nav-bar.css"
-/> -->
 <script type="text/babel" src="../public/webpack/notifications.js"></script>
-
+<script type="text/babel" src="../public/webpack/app.js"></script>
+<script>$(function () {$('[data-toggle="tooltip"]').tooltip()})</script>
 
 <div id="app"> </div>
-<script type="text/babel" src="../public/webpack/app.js"></script>
+
+
+
+
 
 <br>
 <br>
