--- a/public/css/NavigationBarComponent.css
+++ b/public/css/NavigationBarComponent.css
@@ -1,30 +1,55 @@
 li.nav-item:hover{
-    border-radius: 200px 59px 60px 59px;
-    -moz-border-radius: 200px 59px 60px 59px;
-    -webkit-border-radius: 200px 59px 60px 59px;
-    border: 0px solid #000000;
-    background: -moz-linear-gradient(left, #B8B8B8 0%, #2388CB 50%, #144E75 100%);
-    background: -webkit-linear-gradient(left, #B8B8B8 0%, #2388CB 50%, #144E75 100%);
-    background: linear-gradient(to right, #B8B8B8 0%, #2388CB 50%, #144E75 100%);
+  border: 0px solid #000000;
+  border-radius: 8px;
+  background-color:#282828;
+  }
+  
+  
+  li.nav-item{
+    width: 100px;
+    height: 60px;
     }
+  
+  .nav-item a {
+    display:inline-block;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+       
+  }
+  
+  i.fas,
+  i.fab,i.far {
+    display:inline-block;
+    color:#B8B8B8;
+    padding: 15px;
     
+    height: 60px; 
+    text-align: center;
+    font-size: 30px;
     
-    i.fas,
-    i.fab,i.far {
-      /* color:#B8B8B8; */
-      margin: 8px;
-      padding: 8px;
-      color: aqua;
-      opacity: 0.2;
-    }
+  }
+  
+  i.fa-sign-out-alt{
+    font-size: 23px;
+  }
+  
+  i.fa-user{
+    font-size: 23px;
+  }
+  
+  
+  .selected i{
+     color:#3062c7;
+     border-bottom: 3.2px solid #3062c7;
+  }
+  
+  
+  @media (min-width: 768px) {
+     .navbar {
+      height: 60px;
+      }
+  }
+  @media (max-width: 767px) {
     
-    .selected i{
-      
-      background-color:   #B8B8B8;
-      border-radius: 200px 59px 60px 59px;
-      -moz-border-radius: 200px 59px 60px 59px;
-      -webkit-border-radius: 200px 59px 60px 59px;
-      border: 0px solid #000000;
-     
-      
-    }
+  }
