added webpack configuration for development and production purposes

--- a/views/sign-in-room8s.ejs
+++ b/views/sign-in-room8s.ejs
@@ -10,7 +10,7 @@
   <link rel='icon' href="../public/room8s_logo.ico" type='image/x-icon' />
   <!------ Include the above in your HEAD tag ---------->
 
-  <title>Login Page</title>
+  <title>Welcome to room8s</title>
   <!--Made with love by Mutiullah Samim -->
 
   <!--Bootsrap 4 CDN-->
