--- a/public/css/NotificationsComponent.css
+++ b/public/css/NotificationsComponent.css
@@ -7,8 +7,54 @@ li.nav-item.dropdown{
     position: relative;
 }
 
-/* .notifications-number{
-    position: "absolute" !important; 
-    left: "60px" !important;
-    top: "6px" !important;
-} */
+
+@keyframes rotateViolently {
+    0%{
+        transform: rotate(10deg);
+    }
+    
+    20%{
+        transform: rotate(-10deg), scale(1.1);
+    }
+
+    40%{
+        transform: rotate(20deg) scale(1.2);
+    }
+
+    50%{
+        transform: rotate(-20deg) scale(1.4);
+    }
+
+    55% {
+        transform: rotate(-25deg) scale(1.5);
+    }
+    60%{
+        transform: rotate(20deg) scale(1.4);
+    }
+
+    65% {
+        transform: rotate(-25deg) scale(1.4);
+    }
+
+    70%{
+        transform: rotate(20deg) scale(1.3);
+    }
+
+    80% {
+        transform: rotate(-25deg) scale(1.2);
+    }
+    90%{
+        transform: rotate(20deg) scale(1.1);
+    }
+    100% {
+        transform:  rotate(0) scale(1);
+    }
+  }
+
+.fa-bell--animation {
+    /* transition: all .2s; */
+    animation-name: rotateViolently;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+}
+
