--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding:0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 
   /* background: #000 !important;
   color: #0f0 !important;
@@ -14,6 +16,7 @@
 body{
   height: 100%;
   width: 100%;
+  box-sizing: border-box;
   background-image:  url('../sign_in_background_image.jpg');
   background-size:cover;
   -webkit-background-size: cover;
@@ -21,8 +24,11 @@ body{
   -o-background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
-  font-family: 'Numans', sans-serif;
+  /* font-family: 'Numans', sans-serif; */
+  font-family: "Lato", sans-serif;
+  /* font-family: sans-serif; */
   color:  #272727;
+
   /* Add the blur effect */
   /* filter: blur(8px);
   -webkit-filter: blur(8px); */
@@ -40,11 +46,50 @@ body{
 } */
 #groupChat {
   box-shadow: 2px -1px 11px -2px rgba(0,0,0,0.75);
+  animation-name: moveInRight;
+  animation-duration: 1.5s;
 }
 
 #group-dashboard{
   box-shadow: 2px -1px 11px -2px rgba(0,0,0,0.75);
+
+  animation-name: moveInLeft;
+  animation-duration: 1.5s;
 }
+
+
+@keyframes moveInLeft {
+  0%{
+      opacity: 0;
+      transform: translateX(-50%);
+  }
+
+  80% {
+      transform: translateX(15%);
+  }
+
+  100% {
+      opacity: 1;
+      transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0%{
+      opacity: 0;
+      transform: translateX(50%);
+  }
+
+  80% {
+      transform: translateX(-15%);
+  }
+
+  100% {
+      opacity: 1;
+      transform: translate(0);
+  }
+}
+
 
 .input-group-prepend span{
   width: 50px;
@@ -77,3 +122,47 @@ body{
   background: #b30000; 
 }
 
+.bttn {
+  transition: all .2s;
+  display: inline-block;
+  white-space: nowrap;
+  box-shadow: 1px 2.5px 5px rgba(0,0,0,.2);
+  position: relative;
+}
+
+.bttn-pill {
+  padding:  12px 20px;
+  border-radius: 500px;
+}
+
+.bttn:hover{
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+
+.bttn:active{
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.bttn::after{
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top:0;
+  left:0;
+  z-index: -1;
+  transition: all .6s;
+
+  border-radius: inherit;
+  display: inherit;
+  background-color: inherit;
+  padding:  inherit;
+}
+
+
+.bttn:hover::after{
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
