--- a/sass/modules/_autocomplete.scss
+++ b/sass/modules/_autocomplete.scss
@@ -4,13 +4,13 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   }
   
-  .tt-hint {
+.tt-hint {
     color: #999;
-    /* color: #000 */
-  }
-  
-  .tt-menu {
-    /* UPDATE: newer versions use tt-menu instead of tt-dropdown-menu */
+/* color: #000 */
+}
+
+.tt-menu {
+/* UPDATE: newer versions use tt-menu instead of tt-dropdown-menu */
     width: 200px;
     margin-top: 12px;
     padding: 8px 0;
@@ -19,22 +19,23 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-  }
-  
-  .tt-suggestion {
+}
+
+.tt-suggestion {
     padding: 3px 20px;
     font-size: 18px;
     line-height: 24px;
     cursor: pointer;
-    color: #000
-  }
-  
-  .tt-suggestion:hover {
-    color: #f0f0f0;
-    /* color:#000; */
-    background-color: rgb(112, 48, 48);
-  }
-  
-  .tt-suggestion p {
-    margin: 0;
-  }
+    color: #000;
+
+    p {
+        margin: 0;
+    }
+
+    &:hover {
+        color: #f0f0f0;
+        background-color: rgb(112, 48, 48);
+    }
+
+}
+
