--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,16 +3,25 @@
 
 <head>
     <link rel='icon' href="../public/room8s_logo.ico" type='image/x-icon' />
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../public/css/style.css">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet"> -->
     <%- include("headers.ejs") %>
     <script> var loggedInUser = <%- JSON.stringify(user) %> </script>
 
     <script src="socket.io/socket.io.js"></script>
     <script type="text/babel" src="../public/webpack/expensesPage.js"></script>
     <script>
+        let size = (window.innerWidth + 80) / 200;
+        $("html").css("font-size", size + "px");
+
+        window.onresize = () => {
+            let size = (window.innerWidth + 80) / 200;
+            console.log('i was called');
+            $("html").css("font-size", size + "px");
+        }
+        $("html").css("font-size", "10px");
         if (socket === undefined) {
             var socket = io.connect();
-
             document.addEventListener('triggerNewMessageSound', e => {
                 // socket.emit("broadcastNewGroupMessage", e.detail);
                 let details = e.detail;
@@ -85,7 +94,7 @@
     </script>
     <%- include("template-nav-bar.ejs") %>
     <script type="text/javascript" src="../public/webpack/autoComplete.js"></script>
-    <link rel="stylesheet" type="text/css" href="../public/css/main.css">
+    
 
     <title>Room8s</title>
 
