--- a/sass/layout/navigation-bar/_NavigationBarComponent.scss
+++ b/sass/layout/navigation-bar/_NavigationBarComponent.scss
@@ -53,7 +53,7 @@ i.fa-search{
   
 .selected i{
     color:#3062c7;
-    border-bottom: 0.3rem solid #3062c7;
+    border-bottom: 0.3rem solid $color-dark-blue;
 }
     
     
