--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -2,7 +2,7 @@
 *::before,
 *::after {
   margin: 0;
-  padding:0;
+  padding: 0;
   box-sizing: inherit;
 
   /* background: #000 !important;
@@ -10,12 +10,12 @@
   outline: solid #f00 1px !important; */
 }
 
-body{
+body {
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
-  background-image:  url('../sign_in_background_image.jpg');
-  background-size:cover;
+  background-image: url("../sign_in_background_image.jpg");
+  background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -24,10 +24,10 @@ body{
   /* font-family: 'Numans', sans-serif; */
   font-family: "Lato", sans-serif;
   /* font-family: sans-serif; */
-  color:  #272727;
+  color: #272727;
 
   /* Add the blur effect */
   /* filter: blur(8px);
   -webkit-filter: blur(8px); */
   /* text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07); */
-  }
+}
