--- a/sass/layout/navigation-bar/_NavigationBarComponent.scss
+++ b/sass/layout/navigation-bar/_NavigationBarComponent.scss
@@ -1,70 +1,69 @@
-li.nav-item{
+li.nav-item {
   width: 10rem;
   height: 6rem;
 
-  &:hover{
+  &:hover {
     border: 0px solid #000000;
-    border-radius: .8rem;
-    background-color:#282828;
-    }
-
+    border-radius: 0.8rem;
+    background-color: #282828;
+  }
 }
-    
+
 .nav-item a {
-  display:inline-block;
+  display: inline-block;
   width: 100%;
   height: 100%;
-  text-align: center;    
+  text-align: center;
 }
-    
+
 i.fas,
-i.fab,i.far,i.fa-sign-out-alt, i.fa-user{
-  display:inline-block;
-  color:#B8B8B8;
+i.fab,
+i.far,
+i.fa-sign-out-alt,
+i.fa-user {
+  display: inline-block;
+  color: #b8b8b8;
   padding: 1.5rem;
-  
-  height: 6rem; 
+
+  height: 6rem;
   text-align: center;
   font-size: 3rem;
-  
 }
-  
-i.fa-search{
-  display:inline-block;
-  color:#B8B8B8;
+
+i.fa-search {
+  display: inline-block;
+  color: #b8b8b8;
   padding: 1.5rem;
-  
-  height: 6rem; 
+
+  height: 6rem;
   text-align: center;
   font-size: 2rem;
 
   width: 100%;
   height: 100%;
 }
-  
+
 .navbar-brand {
   width: 6rem;
 
   &--image {
     width: 100%;
-    height: auto
+    height: auto;
   }
 }
-  
-.selected i{
-    color:#3062c7;
-    border-bottom: 0.3rem solid $color-dark-blue;
+
+.selected i {
+  color: #3062c7;
+  border-bottom: 0.3rem solid $color-dark-blue;
 }
-    
-    
+
 @media (min-width: 768px) {
-    .navbar {
+  .navbar {
     height: 6rem;
-    }
+  }
 }
-  
+
 .navbar-animation {
   animation-name: moveInTop;
   animation-duration: 1.5s;
 }
-
