--- a/sass/modules/_autocomplete.scss
+++ b/sass/modules/_autocomplete.scss
@@ -1,41 +1,39 @@
 /* Autocomplete styles */
 .tt-query {
-    /* UPDATE: newer versions use tt-input instead of tt-query */
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  }
-  
+  /* UPDATE: newer versions use tt-input instead of tt-query */
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
 .tt-hint {
-    color: #999;
-/* color: #000 */
+  color: #999;
+  /* color: #000 */
 }
 
 .tt-menu {
-/* UPDATE: newer versions use tt-menu instead of tt-dropdown-menu */
-    width: 200px;
-    margin-top: 12px;
-    padding: 8px 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+  /* UPDATE: newer versions use tt-menu instead of tt-dropdown-menu */
+  width: 200px;
+  margin-top: 12px;
+  padding: 8px 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .tt-suggestion {
-    padding: 3px 20px;
-    font-size: 18px;
-    line-height: 24px;
-    cursor: pointer;
-    color: #000;
+  padding: 3px 20px;
+  font-size: 18px;
+  line-height: 24px;
+  cursor: pointer;
+  color: #000;
 
-    p {
-        margin: 0;
-    }
+  p {
+    margin: 0;
+  }
 
-    &:hover {
-        color: #f0f0f0;
-        background-color: rgb(112, 48, 48);
-    }
-
+  &:hover {
+    color: #f0f0f0;
+    background-color: rgb(112, 48, 48);
+  }
 }
-
