--- a/sass/modules/_button.scss
+++ b/sass/modules/_button.scss
@@ -1,56 +1,49 @@
 .btn {
-    min-width: 13rem;
+  min-width: 13rem;
 }
 
-.u-bttn-container{
+.u-bttn-container {
+  .bttn {
+    transition: all 0.2s;
+    display: inline-block;
+    white-space: nowrap;
+    box-shadow: 0.1rem 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
+    position: relative;
 
-    .bttn {
-        transition: all .2s;
-        display: inline-block;
-        white-space: nowrap;
-        box-shadow: .1rem .25rem .5rem rgba(0,0,0,.2);
-        position: relative;
-    
-        &:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+    &:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 
-            &::after {
-                transform: scaleX(1.4) scaleY(1.6);
-                opacity: 0;
-            }
-        }
-    
-        &:active {
-            transform: translateY(-3px);
-            box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
-        }
-    
-        &::after {
-            content: "";
-            height: 100%;
-            width: 100%;
-            position: absolute;
-            top:0;
-            left:0;
-            z-index: -1;
-            transition: all .6s;
-          
-            border-radius: inherit;
-            display: inherit;
-            background-color: inherit;
-            padding:  inherit;
-        }
-    
-        &--pill {
-            padding:  1.2rem 2rem;
-            border-radius: 50rem;
-        }
+      &::after {
+        transform: scaleX(1.4) scaleY(1.6);
+        opacity: 0;
+      }
     }
 
+    &:active {
+      transform: translateY(-3px);
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+    }
+
+    &::after {
+      content: "";
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      transition: all 0.6s;
+
+      border-radius: inherit;
+      display: inherit;
+      background-color: inherit;
+      padding: inherit;
+    }
+
+    &--pill {
+      padding: 1.2rem 2rem;
+      border-radius: 50rem;
+    }
+  }
 }
-
-  
-
-  
-
