--- a/sass/modules/_scrollbar.scss
+++ b/sass/modules/_scrollbar.scss
@@ -1,19 +1,18 @@
 ::-webkit-scrollbar {
-    width: 1rem;
+  width: 1rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0.5rem grey;
+  border-radius: 0.2rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: black;
+  border-radius: 0.2rem;
+  &:hover {
+    background: #b8b8b8;
   }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 .5rem grey; 
-    border-radius: .2rem;
-  }
-    
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: black; 
-    border-radius: .2rem;
-    &:hover {
-        background: #B8B8B8;
-    }
-  }
-  
+}
